<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dosageback"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/text_back"
        android:padding="20dp"
        android:layout_marginTop="75dp">


        <TextView
        android:text="@string/crop_type_label"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/cropTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/crop_types" />

    <TextView
        android:text="@string/pest_severity_label"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <Spinner
        android:id="@+id/pestSeveritySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/pest_severities" />

    <TextView
        android:text="@string/treating_area_label"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/treatingAreaEditText"
        android:inputType="numberDecimal"
        android:hint="Enter in acres"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/pesticide_label"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <Spinner
        android:id="@+id/pesticideSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:padding="16dp"
        android:entries="@array/pesticide_names" />



    <Button
        android:id="@+id/calculateButton"
        android:text="@string/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/green_border"
        android:textSize="18sp"
        android:padding="8dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="50dp"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="Dosage  : " />

        <TextView

            android:id="@+id/dosageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dosage_result"
            android:textAppearance="@android:style/TextAppearance.Medium" />

    </LinearLayout>

    <!--<TextView
        android:id="@+id/safetyGuide"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginTop="45dp"
        android:text="@string/safetyGuide" />-->

    </LinearLayout>
</LinearLayout>
